gccida/g0/process_reg_param
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_reg_param/src/integrate.c:1052:28: error: use of undeclared identifier 'machine_mode'
temp = copy_to_mode_reg( ( machine_mode)*( ( unsigned __int8 *)loc + 2), copy); 
                           ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_reg_param/src/obj/integrate.o] Error 1
